<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Progi</string>
    <string name="str_atv_places">Enter Place Here</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="orange">#ff5500</color>
    <color name="light_green">#b2f7b2</color>
    <color name="cool_red">#fc6666</color>
    <color name="cool_orange">#ffa366</color>
    <color name="dark_pink">#cc0066</color>
    <color name="light_brown">#ab9a61</color>

    <string name="contentdesc4pic1">Content</string>
    <string name="duration_prompt">Choose A Duration</string>
    <string name="event_type_prompt">Choose A Type Of Event</string>

    <string-array name="duration_array">
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>4 hour</item>
        <item>till lunch</item>
        <item>till evening</item>
        <item>till late</item>
        <item>all night</item>
    </string-array>
    <string-array name="type_array">
        <item>meeting</item>
        <item>party</item>
        <item>social</item>
        <item>religious</item>
        <item>programming</item>
        <item>cinema</item>
        <item>drink up</item>
        <item>music festival</item>
        <item>strike</item>
    </string-array>

    <string name="start_year">2013</string>
    <string name="end_year">2014</string>
    <string name="directions">DIRECTIONS</string>
    <string name="draw_route_on_map">Draw Route On Map</string>
    <string name="name_of_event">NAME OF EVENT \n[Pick A Catchy Name]</string>
    <string name="date">DATE</string>
    <string name="description">DESCRIPTION</string>
    <string name="textview">TEXT VIEW</string>
    <string name="location">LOCATION</string>
    <string name="type_of_event">TYPE OF EVENT \n[Pick The One That Is Closest]</string>
    <string name="duration">DURATION</string>
    <string name="rate_this_event">HEARD OF THIS EVENT</string>
    <string name="start_time">START TIME OF EVENT</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="location_of_event">LOCATION OF EVENT</string>
    <string name="description_of_event">DESCRIPTION OF EVENT \n[Whats Is This All About]</string>
    <string name="directions_api_url">https://maps.googleapis.com/maps/api/directions/</string>
    <string name="places_api_url">https://maps.googleapis.com/maps/api/place/</string>
    <string name="website_url">http://192.168.43.169/android_connect/</string>
    <string name="submit">Submit</string>
    <string name="logo">logo</string>
    <string name="total_people_who_have_heard">TOTAL PEOPLE WHO HAVE HEARD</string>
    <string name="enter_your_name_and_phone_number">"Enter your Name and Phone Number "</string>
    <string name="your_phonenumber">Your PhoneNumber</string>
    <string name="your_name">Your Name</string>
    <string name="event_type">EVENT TYPE</string>

</resources>