<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name_and_phone_number" />

    <EditText
        android:id="@+id/getUserContact_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/your_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/getUserContact_userPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/your_phonenumber"
        android:inputType="phone" >
    </EditText>

</LinearLayout>