<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget32"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/widget86"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/details_relativeLayout0"
            android:layout_width="fill_parent"
            android:layout_height="30dp" >

            <TextView
                android:id="@+id/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/name_of_event"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_descriptionLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/description"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_descriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_descriptionLabel"
                android:layout_alignBottom="@+id/details_descriptionLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_descriptionLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_locationLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/location"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_locationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_locationLabel"
                android:layout_alignBottom="@+id/details_locationLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_locationLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_typeLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/type_of_event"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_typeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_typeLabel"
                android:layout_alignBottom="@+id/details_typeLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_typeLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout4"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_dateLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/date"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_dateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_dateLabel"
                android:layout_alignBottom="@+id/details_dateLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_dateLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout5"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_timeLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/start_time"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_timeLabel"
                android:layout_alignBottom="@+id/details_timeLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_timeLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/details_relativeLayout6"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/details_durationLabel"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/duration"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/details_durationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_durationLabel"
                android:layout_alignBottom="@+id/details_durationLabel"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/details_durationLabel"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/white" />

        <TextView
            android:id="@+id/details_ratingsLabel"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_event"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/widget33"
            android:layout_width="320dp"
            android:layout_height="108dp"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="319dp"
                android:layout_height="107dp" >

                <RadioButton
                    android:id="@+id/radioButton_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</ScrollView>